noinst_LIBRARIES = libimage_processing.a

INCLUDES = \
     -I$(top_srcdir)/src

libimage_processing_a_SOURCES = \
        ColorImage.cxx ColorImage.h \
        GrayImage.cxx GrayImage.h \
        BinaryImage.cxx BinaryImage.h \
        Histogram.h \
        Image.h \
        ImageFile.h \
        ImageMod.cxx ImageMod.h \
        Matrix.h \
        Pixel.h \
        conversions.cxx conversions.h \
        edge_detect.cxx edge_detect.h \
        hysteresis.cxx hysteresis.h \
        exif.cpp exif.h \
        transform.h \
        types.h

