noinst_LIBRARIES = libInterface.a

INCLUDES = \
        -I$(top_srcdir)/intl \
        @GTK_CFLAGS@ \
        -I$(top_srcdir)/src \
        -I$(top_srcdir)/src/matching \
        -I$(top_srcdir)/src/image_processing

libInterface_a_SOURCES = \
        GtkCompat.h \
        MainWindow.cxx MainWindow.h \
        MatchResultsWindow.cxx MatchResultsWindow.h \
        MatchingQueueDialog.cxx MatchingQueueDialog.h \
        MappedContoursDialog.cxx MappedContoursDialog.h \
        AboutDialog.cxx AboutDialog.h \
        ErrorDialog.cxx ErrorDialog.h \
        TraceWindow.cxx TraceWindow.h \
        ContourInfoDialog.cxx ContourInfoDialog.h \
        OpenFileSelectionDialog.cxx OpenFileSelectionDialog.h \
        SaveFileSelectionDialog.cxx SaveFileSelectionDialog.h \
        ImageViewDialog.cxx ImageViewDialog.h \
        OptionsDialog.cxx OptionsDialog.h \
        MatchingDialog.cxx MatchingDialog.h \
        AlterBrightnessDialog.cxx AlterBrightnessDialog.h \
        EnhanceContrastDialog.cxx EnhanceContrastDialog.h \
        ResizeDialog.cxx ResizeDialog.h \
        SplashWindow.cxx SplashWindow.h \
        DeleteOutlineDialog.cxx DeleteOutlineDialog.h \
        ModifyDatabaseWindow.cxx ModifyDatabaseWindow.h \
        NoMatchWindow.cxx NoMatchWindow.h \
        CatalogSchemeDialog.cxx CatalogSchemeDialog.h \
        CreateDatabaseDialog.cxx CreateDatabaseDialog.h \
        DataExportDialog.cxx DataExportDialog.h \
        DBConvertDialog.cxx DBConvertDialog.h \
        ExportFinzDialog.cxx ExportFinzDialog.h \
        OpenFileChooserDialog.cxx OpenFileChooserDialog.h \
        SaveFileChooserDialog.cxx SaveFileChooserDialog.h


